[gd_scene load_steps=9 format=3 uid="uid://yix0kviu5f7m"]

[ext_resource type="Script" uid="uid://u1p2n8y25bti" path="res://scenes+scripts/enemies/enemy.gd" id="1_wnqa0"]
[ext_resource type="Script" uid="uid://dy5wryibak7ji" path="res://components/hit_box_component.gd" id="2_vjqqp"]
[ext_resource type="Script" uid="uid://bnaedlng2pm5g" path="res://components/sight_component.gd" id="5_j311m"]
[ext_resource type="Script" uid="uid://b6lm52i8lf8of" path="res://states/state_machine.gd" id="6_mprpf"]
[ext_resource type="Script" uid="uid://b80at38rnha8m" path="res://states/civ_move_state.gd" id="7_5tsh8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fb3bd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tydb0"]
radius = 100.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3naud"]
radius = 0.01

[node name="civilian" type="CharacterBody2D" groups=["civilian", "enemy"]]
motion_mode = 1
script = ExtResource("1_wnqa0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fb3bd")

[node name="square" type="Polygon2D" parent="."]
polygon = PackedVector2Array(8, 8, 9, 4, 9, 0, 9, -4, 8, -8, 4, -9, 0, -9, -4, -9, -8, -8, -9, -4, -9, 0, -9, 4, -8, 8, -4, 9, 0, 9, 4, 9)

[node name="square" type="Polygon2D" parent="square"]
show_behind_parent = true
scale = Vector2(1.1, 1.1)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(9, 9, 9, -9, -9, -9, -9, 9)

[node name="HitBoxComponent" type="CharacterBody2D" parent="." node_paths=PackedStringArray("holder")]
collision_layer = 4
collision_mask = 4
script = ExtResource("2_vjqqp")
holder = NodePath("..")
metadata/_custom_type_script = "uid://dy5wryibak7ji"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("CircleShape2D_fb3bd")

[node name="SightComponent" type="Area2D" parent="."]
visible = false
script = ExtResource("5_j311m")
targetGroup = "player"
metadata/_custom_type_script = "uid://bnaedlng2pm5g"

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightComponent"]
shape = SubResource("CircleShape2D_tydb0")
debug_color = Color(0.7, 0.653333, 0, 0)

[node name="closeSightComp" type="Area2D" parent="."]
visible = false
script = ExtResource("5_j311m")
targetGroup = "civilian"
canLeave = true
storeAll = true
metadata/_custom_type_script = "uid://bnaedlng2pm5g"

[node name="CollisionShape2D" type="CollisionShape2D" parent="closeSightComp"]
shape = SubResource("CircleShape2D_3naud")
debug_color = Color(0.7, 0.653333, 0, 0)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("baseState")]
script = ExtResource("6_mprpf")
baseState = NodePath("civMoveState")
metadata/_custom_type_script = "uid://b6lm52i8lf8of"

[node name="civMoveState" type="Node" parent="StateMachine" node_paths=PackedStringArray("see", "closeSight", "holder", "character")]
script = ExtResource("7_5tsh8")
see = NodePath("../../SightComponent")
closeSight = NodePath("../../closeSightComp")
closeRadius = 150.0
stopRange = 500.0
holder = NodePath("../..")
speed = 2000.0
drag = 750.0
maxSpeed = 100.0
character = NodePath("../../square")
runDirection = -1

[connection signal="body_entered" from="SightComponent" to="SightComponent" method="_on_body_entered"]
[connection signal="body_exited" from="SightComponent" to="SightComponent" method="_on_body_exited"]
[connection signal="body_entered" from="closeSightComp" to="closeSightComp" method="_on_body_entered"]
[connection signal="body_exited" from="closeSightComp" to="closeSightComp" method="_on_body_exited"]
